Tweaking padding/margin spacing. Minor fixes.

--- a/less/320.less
+++ b/less/320.less
@@ -4,6 +4,10 @@
 
 		font-family: Arial, sans-serif;
 		font-size: 115%;
+
+		.kanji > * {
+			padding: 2%;
+		}
 	}
 
 	/* segments */
