--- a/less/480.less
+++ b/less/480.less
@@ -22,6 +22,10 @@
 		margin: 0;
 		word-wrap: break-word;
 
+		> * {
+			padding: 2%;
+		}
+
 		> header{
 
 			height: auto; min-height: 7em;
