--- a/less/forms.less
+++ b/less/forms.less
@@ -26,6 +26,10 @@ label:after{
 	content: ":";
 }
 
+label.clean:after{
+	content: " ";
+}
+
 input[type="text"],
 input[type="email"],
 input[type="tel"],
