--- a/less/ipadPortrait.less
+++ b/less/ipadPortrait.less
@@ -3,7 +3,11 @@
 	
 	.kanji {
 
-		width: 90%;
+		width: 100%;
+	}
+
+	.kanji > * {
+		padding: 2%;
 	}
 
 	.halves > *, .half, .three-quarters,
@@ -15,7 +19,7 @@
 	.thirds > *, .third,
 	.quarters > *, .quarter{
 
-		width: 50%;
+		width: 100%;
 	}
 	
 }
