--- a/less/typography.less
+++ b/less/typography.less
@@ -44,6 +44,17 @@ body{
 	.font_size(1.2);
 }
 
+ol,
+ol.half
+ol.third,
+ol.quarter,
+ul,
+ul.half,
+ul.third,
+ul.quarter{
+	padding-left: 1rem;
+}
+
 p{
 	margin: .5em 0 0 0;
 }
@@ -95,6 +106,10 @@ blockquote:after{
 
 .right-text{
 	text-align: right;
+}
+
+.left-text{
+	text-align: left;
 }
 
 .underline{
